@@ -6,6 +6,8 @@ Changes since 2.4.37:
 Lib/
 * slapdtest now evaluates env var SLAPD for optionally pointing
   to OpenLDAP's slapd executable
+* added LDAPI support in slaptest.SlapdObject which is internally used
+  in methods ldapadd() and ldapwhoami()
 
 Tests/
 
@@ -1420,4 +1422,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.437 2017/04/27 11:13:39 stroeder Exp $
+$Id: CHANGES,v 1.438 2017/04/27 12:24:50 stroeder Exp $
